--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
     <div class="displayTitle">Hmm... Nothing read yet</div>
 
+    <h1 class="totalbooks">Total Books</h1>
+    <div class="totalBox">
+       
+
+        </div>
+
     <button class="addbtn" id="addbutton"><i class="fas fa-book-open"></i>
     Add Book</button>
     <div id="myModal" class="modal">
@@ -33,18 +39,22 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>
-          <p><form>
+          <p><form class="bookform">
               <label for="title">Title</label>
-              <input type="text" id="title"><br>
+              <input type="text" id="title" required><br>
 
             <label for="author">Author</label>
-            <input type="text" id="author"><br>
+            <input type="text" id="author" required><br>
 
             <label for="pages">Pages</label>
-            <input type="text" id="pages"><br>
+            <input type="text" id="pages" required><br>
 
-            <input type="checkbox" id="checkbox" name="yes" value="yes">
+            <label for="checkbox">Finished reading?</label><br>
+            <input type="checkbox" id="checkbox" name="yes">
             <label for="yes"> Yes</label><br>
+
+            <input type="checkbox" id="checkbox" name="no" value ="false">
+            <label for="no"> No</label><br>
 
             <button class ="bookSubmit" type="button">Add</button>
 
