finished styling changes

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <div class="modal-content">
           <span class="close">&times;</span>
           <p><form class="bookform">
-              <label for="title">Title</label>
-              <input type="text" id="title" required><br>
+              <label for="title">Title</label> 
+              <input type="text" id="title" required><br><hr>
 
             <label for="author">Author</label>
-            <input type="text" id="author" required><br>
+            <input type="text" id="author" required><br><hr>
 
             <label for="pages">Pages</label>
-            <input type="text" id="pages" required><br>
+            <input type="text" id="pages" required><br><hr>
 
             <label for="checkbox">Finished reading?</label><br>
             <input type="checkbox" id="checkbox" name="yes">
