--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
 
-      <div class="clearLS"><button>CLEAR</button></div>
+      <div class="clearLS"><button class="clearLS">Clear Local Storage</button></div>
         
 </div>
 
