transparent btns, media queries

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="6-books-png-image-with-transparency-background.png"/>
-    <title>Library</title>
+    <title>Library NOT OG</title>
 </head>
 <body>
     
@@ -75,7 +75,7 @@
             </div>
         </div>
 
-      <div class="clearLS"><button class="clearLS">Clear Local Storage</button></div>
+      <div class="clearDiv"><button class="clearLS">Clear Local Storage</button></div>
         
 </div>
 
