media queries & transparent btns

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="6-books-png-image-with-transparency-background.png"/>
-    <title>Library NOT OG</title>
+    <title>Library</title>
 </head>
 <body>
     
