media queries, transparent btns, form validation styling

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     </div>
 
 
+        <div class="totalbooksbox">
         <h1 class="readbooks">Total Books Read</h1>
         <div class="totalreadbox"></div>
+        </div>
 
 
     <button class="addbtn" id="addbutton"><i class="fas fa-book-open"></i>
