cleaned up code- messed with format

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 
       <div class="library-title"><i class="fas fa-book"></i> Library</div>
 
-      <h1 class="book"><i class="fas fa-book"></i></h1>
+      <div id="main-container">
+        <h1 class="book"><i class="fas fa-book"></i></h1>
 
-      <div class="displayTitle">Hmm... Nothing read yet</div>
-
+        <div class="displayTitle">Hmm... Nothing read yet</div>
+      </div>
       <h1 class="totalbooks">Total Books</h1>
       <div class="totalBox"></div>
 
@@ -46,9 +47,11 @@
         <div class="totalreadbox"></div>
       </div>
 
-      <button class="addbtn" id="addbutton">
-        <i class="fas fa-book-open"></i> Add Book
-      </button>
+      <div id="btn-container">
+        <button class="addbtn" id="addbutton">
+          <i class="fas fa-book-open"></i> Add Book
+        </button>
+      </div>
       <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
